--- a/recruit/src/locales/en.json
+++ b/recruit/src/locales/en.json
@@ -1,11 +1,29 @@
 // en.json
 {
-  "login_title": "Login",
-  "username": "Username",
-  "password": "Password",
-  "login_button": "Login",
-  "login_success": "Logged in successfully!",
-  "login_failed": "Login failed. Please check your credentials.",
-  "jobs_fetch_error": "Failed to load jobs.",
-  "loading_jobs": "Loading jobs..."
+  "register_title": "Register",
+  "email": "Email",
+  "email_required": "Email is required",
+  "email_invalid": "Invalid email address",
+  "username_required": "Username is required",
+  "password_required": "Password is required",
+  "password_min": "Password must be at least 6 characters",
+  "user_type_required": "User type is required",
+  "select_user_type": "Select user type",
+  "job_seeker": "Job Seeker",
+  "company_rep": "Company Representative",
+  "register_button": "Register",
+  "register_success": "Registered successfully!",
+  "register_failed": "Registration failed.",
+  "jobs_title": "Job Listings",
+  "dashboard_title": "Welcome, User {username}",
+  "job_seeker_dashboard": "Job Seeker Dashboard",
+  "company_rep_dashboard": "Company Dashboard",
+  "job_seeker_welcome": "Explore job opportunities tailored to your skills.",
+  "company_rep_welcome": "Manage your job postings and applications.",
+  "browse_jobs": "Browse Jobs",
+  "post_job": "Post a Job",
+  "nav_jobs": "Jobs",
+  "nav_dashboard": "Dashboard",
+  "logout": "Logout",
+  "logout_success": "Logged out successfully"
 }
